# Kron

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
crates/kron-cli/: Cargo.toml
crates/kron-cli/src/: main.rs
crates/kron-cli/src/commands/: audit.rs  doctor.rs  job.rs  log.rs  mod.rs  runtime.rs  server.rs
crates/kron-core/: Cargo.toml
crates/kron-core/benches/: core_bench.rs
crates/kron-core/src/: audit.rs  clock.rs  cluster.rs  engine.rs  error.rs  event.rs  heap.rs  ipc.rs  lib.rs  log.rs  openraft_adapter.rs  retry.rs  schedule.rs  snapshot.rs  state.rs  timer.rs
crates/kron-core/src/openraft_adapter/: file_store.rs  network.rs  runtime.rs
crates/kron-core/tests/: engine_integration.rs
crates/kron-py/: Cargo.toml
crates/kron-py/src/: lib.rs
docs/adr/: 0001-embedded-time-engine.md
docs/design/: asyncio.md  distributed-production-readiness.md  multiprocess-ipc.md  snapshot-compaction.md  v0-engine.md
docs/reference/: storage-format.md
docs/usage/: cli.md  python.md  release.md  security.md
examples/: cleanup.py  cli_observe.py  email_digest.py  retry_failure.py
scripts/: check-wheel-install.sh
tests/python/: test_async_api.py  test_crash_recovery.py  test_distributed.py  test_kron_api.py
