[package]
name    = "kron-cli"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "kron"
path = "src/main.rs"

[dependencies]
kron-core  = { path = "../kron-core" }
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
clap       = { workspace = true }
tokio      = { workspace = true }
