[package]
name    = "kron-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono     = { workspace = true }
chrono-tz  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
cron       = { workspace = true }
ulid       = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
fs2        = { workspace = true }
openraft   = { workspace = true }
axum       = { workspace = true }
reqwest    = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "core_bench"
harness = false
